# Web-basic-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  EXTENSIONS.md  LICENSE  Makefile  Readme.md  TEMPLATE-SETUP.md  docker-compose.override.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 293d51c9a311_create_item_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  items.py
backend/app/core/: config.py
backend/app/crud/: item.py
backend/app/db/: session.py
backend/app/models/: item.py
backend/app/schemas/: item.py
backend/tests/: conftest.py  test_health.py  test_items.py
frontend/: Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts  test-utils.tsx
frontend/src/api/: axiosInstance.ts  items.ts
frontend/src/hooks/: useItems.ts
frontend/src/pages/: Home.test.tsx  Home.tsx
frontend/src/routes/: index.tsx
frontend/src/schemas/: item.ts
