[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "alembic>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.9",
    "pyright>=1.1.390",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100                       # max line width
target-version = "py313"                # assume Python 3.13 features

[tool.ruff.lint]
# E=pycodestyle, F=pyflakes, I=import sorting, UP=pyupgrade, B=bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["app"]              # only type-check the app code (not alembic/tests)
pythonVersion = "3.13"
typeCheckingMode = "basic"     # catches real errors without excessive strictness
